Fixed Email adress

--- a/README
+++ b/README
@@ -169,6 +169,6 @@ root privileges to install.
 $Revision$
 $Date$
 
-Author:: Horst Duchene <mailto:monora@users.sourceforge.net>
+Author:: Horst Duchene <mailto:monora@rubyforge.org>
 License:: Copyright (c) 2001, 2004 Horst Duchene
 Released under the same license as Ruby
